Better haxeDocs rendering and reference linking