@@ -32,6 +32,7 @@ import com.intellij.plugins.haxe.model.evaluator.HaxeExpressionEvaluatorContext;
 import com.intellij.plugins.haxe.model.type.ResultHolder;
 import com.intellij.plugins.haxe.util.HaxeResolveUtil;
 import com.intellij.psi.*;
+import com.intellij.psi.search.GlobalSearchScope;
 import com.intellij.psi.util.PsiTreeUtil;
 import org.jetbrains.annotations.Nls;
 import org.jetbrains.annotations.NotNull;
@@ -143,7 +144,7 @@ public class HaxeDocumentationProvider implements DocumentationProvider {
 
       String docs = haxeDocComment.getDocsWithoutIndents();
       HtmlBuilder tmpBuilder = new HtmlBuilder();
-      String rendered = renderer.parseAndRenderDocs(docs);
+      String rendered = renderer.parseAndRenderDocs(docs, comment);
       HtmlChunk.Element content = tmpBuilder.appendRaw(rendered).wrapWith(HtmlChunk.Element.div().attr("class", "content"));
       tmpBuilder.append(content);
 
@@ -270,7 +271,7 @@ public class HaxeDocumentationProvider implements DocumentationProvider {
     if(comment instanceof  haxePsiDocCommentImpl haxeDocComment) {
       HtmlBuilder tmpBuilder = new HtmlBuilder();
       String docs = haxeDocComment.getDocsWithoutIndents();
-      String rendered = service.parseAndRenderDocs(docs);
+      String rendered = service.parseAndRenderDocs(docs, haxeDocComment);
       HtmlChunk.Element content = tmpBuilder.appendRaw(rendered).wrapWith(HtmlChunk.Element.div().attr("class", "content"));
       htmlBuilder.append(content);
     }
@@ -286,9 +287,6 @@ public class HaxeDocumentationProvider implements DocumentationProvider {
       HaxeMethodModel methodModel = methodDeclaration.getModel();
       if (methodModel != null) {
         appendMethodInfo(builder, renderer, methodModel);
-      }
-      else {
-        HaxeComponentName componentName = methodDeclaration.getComponentName();
       }
     }
   }
@@ -463,12 +461,19 @@ public class HaxeDocumentationProvider implements DocumentationProvider {
 
   @Override
   public PsiElement getDocumentationElementForLink(PsiManager psiManager, String link, PsiElement context) {
-
+    GlobalSearchScope resolveScope = context.getResolveScope();
 
     final FullyQualifiedInfo qualifiedInfo = new FullyQualifiedInfo(link);
-    List<HaxeModel> result = HaxeProjectModel.fromElement(context).resolve(qualifiedInfo, context.getResolveScope());
+    if(context instanceof PsiDocCommentBase commentBase) {
+      PsiElement owner = commentBase.getOwner();
+      if(owner != null) {
+        resolveScope =  owner.getResolveScope();
+      }
+    }
+
+    List<HaxeModel> result = HaxeProjectModel.fromElement(context).resolve(qualifiedInfo, resolveScope);
     if (result != null && !result.isEmpty()) {
-      HaxeModel item = result.get(0);
+      HaxeModel item = result.getFirst();
       if (item instanceof HaxeFileModel) {
         HaxeClassModel mainClass = ((HaxeFileModel)item).getMainClassModel();
         if (mainClass != null) {
